--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanitize-dom",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Recursive sanitizer/filter for WHATWG DOMs",
   "main": "src/index.js",
   "scripts": {
@@ -29,7 +29,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
     "gulp": "^3.9.1",
     "jsdoc-to-markdown": "^3.0.2",
