--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Recursive sanitizer/filter for WHATWG DOMs",
   "main": "src/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha ./test/test-nodejs.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/michaelfranzl/sanitize-dom",
   "devDependencies": {
+    "@jspm/core": "^1.0.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
