--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanitize-dom",
-  "version": "3.0.2",
+  "version": "4.0.0",
   "description": "Recursive sanitizer/filter for WHATWG DOMs",
   "main": "src/index.js",
   "scripts": {
@@ -26,15 +26,13 @@
   },
   "homepage": "https://github.com/michaelfranzl/sanitize-dom",
   "devDependencies": {
-    "@jspm/core": "^1.0.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-mocha": "^6.2.2",
     "jsdoc-to-markdown": "^5.0.3",
     "jsdom": "^16.2.1",
-    "mocha": "^7.1.1",
-    "showdown": "^1.8.2"
+    "mocha": "^7.1.1"
   },
   "type": "module"
 }
