--- a/.github/workflows/githubpublish.yml
+++ b/.github/workflows/githubpublish.yml
@@ -27,4 +27,5 @@ jobs:
           scope: '@michaelfranzl'
       - run: npm ci
       - run: npm publish
+        env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
